<resources>
    <string name="app_name">Personal Workout Notebook</string>
    <string name="exercise_title_hint">Exercise Name</string>
    <string name="exercise_title_helper">Name the exercise</string>
    <string name="set_mass">Kg</string>
    <string name="set_repeats">Rp</string>
    <string name="exercise_name_hint">Exercise Name</string>
    <string name="exercise_note_hint">Notes</string>
    <string name="exercise_note_helper">Notes for the Exercise</string>
    <string name="new_workout_title">New workout</string>
    <string name="exercise_title">New exercise</string>
    <string name="exercise_group_hint">Group</string>
    <string name="group_other">Other</string>
    <string name="start_new_workout">Start new Workout</string>
    <string name="start_new_exercise">Add exercise</string>
    <string name="timer_2">Timer 2</string>
    <string name="timer_1">Timer 1</string>
    <string name="set_time">Set time</string>
    <string name="timer_clear">0:00</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_notes">Add Notes</string>
    <string name="add_value">Add Value</string>
    <string name="edit_parameters">Edit Parameters</string>
    <string name="set_new_value">Set new value</string>
    <string name="not_valid_value">Your value is not valid</string>
    <string name="add_bio_parameter">Add bio parameter</string>
    <string name="set_first_value">Value</string>
    <string name="set_bio_parameters_title">Bio parameters title</string>
    <string name="are_you_shore">Are you shore?</string>
    <string name="this_exercise_will_be_permanently_deleted">This exercise will be permanently deleted</string>
    <string name="this_bio_parameter_will_be_permanently_deleted">This bio parameter will be permanently deleted</string>
    <string name="this_value_will_be_permanently_deleted">This value will be permanently deleted</string>
    <string name="delete_this_bio_parameter">Delete this Bio Parameter</string>
    <string name="new_exercise_title">New exercise title:</string>
    <string name="new_exercise_group">New exercise group:</string>


</resources>